Connect user selected colors to color-variation images, fix styling on radio buttons and give white variations border for better visibility

--- a/src/pages/productPage/ProductPage.module.css
+++ b/src/pages/productPage/ProductPage.module.css
@@ -62,7 +62,7 @@
 .productDetails {
   display: flex;
   flex-direction: column;
-  gap: 2.1rem
+  gap: 2.1rem;
 }
 .productDetails h1,
 .productDetails p {
@@ -84,17 +84,20 @@
   align-items: center;
   gap: 0.8rem;
   cursor: pointer;
+  padding: 0.5rem;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  transition: border 0.2s ease-in;
 }
 .colorCircle {
   width: 3.8rem;
   height: 3.8rem;
-  border-radius: 50%;
   display: inline-block;
-  border: 2px solid #ccc;
-  transition: border-color 0.2s;
+  border-radius: 50%;
+  border: 1px solid var(--secondary-gray)
 }
-input[type="radio"]:checked + .colorCircle {
-  border: 2px solid var(--secondary-gray)
+.colorLabel:has(input[type="radio"]:checked) {
+  border: 2px solid var(--secondary-gray);
 }
 .sizeButton {
   padding: 0.9rem 1.6rem;
@@ -122,8 +125,8 @@ input[type="radio"]:checked + .colorCircle {
   max-height: 6.1rem;
 }
 .brandLogoContainer h2 {
-   font-size: var(--txt-reg-xl);
-   font-weight: 600;
+  font-size: var(--txt-reg-xl);
+  font-weight: 600;
 }
 .brandLogoContainer img {
   height: 100%;
